[package]
name = "envy"
version = "1.0.0"
description = "A command line tool for displaying environment variables in a human friendly form"
authors = ["Ian Thompson <quornian@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://quornian.github.io/envy/"
homepage = "https://quornian.github.io/envy/"
repository = "https://github.com/quornian/envy"

[dependencies]
regex = "1.5.4"
clap = { version = "4.5.18", features = ["wrap_help"] }
glob-match = "0.2.1"
