[package]
name = "envy-cmd"
version = "1.0.1"
description = "A command line tool for displaying environment variables in a human friendly form"
authors = ["Ian Thompson <quornian@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://github.com/quornian/envy/blob/v1.0.1/README.md"
homepage = "https://github.com/quornian/envy"
repository = "https://github.com/quornian/envy"
default-run = "envy"

[[bin]]
name = "envy"
path = "src/main.rs"

[dependencies]
regex = "1.5.4"
clap = { version = "4.5.18", features = ["wrap_help"] }
glob-match = "0.2.1"
